--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		Идеальный баланс между Дизайном и Технологиями.">
 		<meta name="keywords" content="katruk design, катрук, разработка сайта Киев, создание сайта, реклама фейсбук, продвижение в инстаграм">
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
+		<link rel="apple-touch-icon" sizes="192x192" href="/img/favicons/android-chrome-192x192.png">
 		<link rel="apple-touch-startup-icon" href="/img/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
