mobile popup footer anchor

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<span><a href="#why">Почему мы</a></span>
 					<span><a href="#what">Что делаем</a></span>
 					<span><a href="#how">Как делаем</a></span>
-					<span><a href="">Готовы обсудить проект?</a></span>
+					<span><a href="#footer">Готовы обсудить проект?</a></span>
 				</div>
 				<div class="mobile__bottom">
 					<div class="mobile__number"><a href="tel:+380508494970">+(380) 50 849-49-70</a></div>
@@ -443,7 +443,7 @@
 				</section>
 			</main>
 
-			<footer class="footer">
+			<footer class="footer" id="footer">
 				<div
 					class="footer__top top"
 					data-aos="fade-up"
