--- a/ua/index.html
+++ b/ua/index.html
@@ -89,7 +89,7 @@
 					<span><a href="/#why">Чому ми</a></span>
 					<span><a href="#what">Що робимо</a></span>
 					<span><a href="#how">Як робимо</a></span>
-					<span><a href="">Готові обговорити проект?</a></span>
+					<span><a href="#footer">Готові обговорити проект?</a></span>
 				</div>
 				<div class="mobile__bottom">
 					<div class="mobile__number"><a href="tel:+380508494970">+(380) 50 849-49-70</a></div>
@@ -428,7 +428,7 @@
 				</section>
 			</main>
 
-			<footer class="footer">
+			<footer class="footer" id="footer">
 				<div
 					class="footer__top top"
 					data-aos="fade-up"
